# Netology-Homeworks

Basic_Programming_C++/Lesson9/Harder_project/: CMakeLists.txt  isosceles_triangle.h  right_triangle.cpp  right_triangle.h
DataBase_PgSQL/Lesson_3_Insert_Select/: Inserts_Panichenko_Task1.sql  Selects_Panichenko_Task2.sql  Selects_Panichenko_Task3.sql
DataBase_PgSQL/Lesson_4_PGSQL_to_Cpp/Task1_Methods/PG_project/: CMakeLists.txt  PG_project.cpp  PG_project.sln  PG_project.vcxproj  PG_project.vcxproj.filters  README.txt
Lesson10/DinLibraryCMake/: CMakeLists.txt  Leaver.cpp  Leaver.h  Main_Leaver.cpp  README.txt
Lesson10/Hierarchy_Class_Dll_CMake/: CMakeLists.txt  Quadrangle.h  README.txt  Square.cpp  Square.h  equilateral_triangle.cpp
Lesson10/Static_Library/: .gitignore  README.txt
Lesson2/Task2/: Task2.cpp  Task2.sln
Lesson3/Addreses/: README.txt  Task1.cpp  Task1.sln  Task1.vcxproj.filters  out.txt
Lesson3/Filter_Addreses/: Filter_Addreses.cpp  Filter_Addreses.vcxproj  in.txt  our.txt
Lesson4/Figures_and_Methods/: Figures_and_Methods.cpp  Figures_and_Methods.sln  README.txt
Lesson4/Figures_sides_and_angle/: Figures_sides_and_angle.cpp  Figures_sides_and_angle.sln  README.txt
Lesson4/Shapes_Number_of_sides/: Shapes_Number_of_sides.cpp  Shapes_Number_of_sides.sln  Shapes_Number_of_sides.vcxproj
Lesson5/Class_Hierarchy/: Class_Hierarchy.vcxproj.filters  Figure.cpp  README.txt
Lesson5/Classes/: Classes.cpp  Classes.sln  Classes.vcxproj  Classes.vcxproj.filters  Counter.cpp
Lesson5/Math_functions/: Math_function.h  Math_functions.cpp  Math_functions.vcxproj  Math_functions.vcxproj.filters
Lesson6/Macros_SUB/: Macros_SUB.vcxproj.filters  README.txt
Lesson6/Preprocessor_directives/: Preprocessor_directives.cpp  (+3 more)
(+628 files in other folders)
